src/components/organisms/job-list/job-list.module.scss
.container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.header {
  height: 3rem;
  display: flex;
  align-items: center;
}

.orgNameAndLocation {
  font-size: 0.875rem;
  color: var(--color-black-01);
}

.orgLocation {
  color: var(--color-gray-01);
  padding-top: 2px;
}

.jobTitle {
  font-size: var(--font-size-m);
  color: #1f2128;
  font-weight: 600;
  margin: 1rem 0 1rem 0;
}

.footer {
  font-size: var(--font-size-s2);
  color: var(--color-gray-01);
}

.seeMore {
  text-align: center;
  font-weight: 600;
  font-size: var(--font-size-s2);
  color: var(--color-primary-01);
}

